Po pierwszym dniu trzy super przepisy

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="recipes/PeperoniRolls.html">Pepperoni Rolls</a>
+    
+    
+    <h2>Śniadanie</h2>
+        <ul>
+            <li><a href="recipes/PeperoniRolls.html">Pepperoni Rolls</a></li>
+        </ul>
+
+    <h2>Obiad</h2>
+        <ul>
+            <li><a href="recipes/Super-DeliciousZuppaToscana.html">Super-Delicious Zuppa Toscana</a></li>
+            <li><a href="recipes/StuffedGreenPeppers.html">Stuffed Green Peppers</a></li>
+        </ul>
 </body>
 </html>
