set correct imgs' relative paths

--- a/recipes/PeperoniRolls.html
+++ b/recipes/PeperoniRolls.html
@@ -1,6 +1,5 @@
 <h1>Peperoni Rolls</h1>
-<img src="./187812-pepperoni-rolls-mfs-4x3-085--141f8c9cea29451c98e9413654bbf1fc.webp">
-
+<img src="../pictures/187812-pepperoni-rolls-mfs-4x3-085--141f8c9cea29451c98e9413654bbf1fc.webp">
 <p>Danie to w postaci takiej lub innej powinno zaspokoic podstawowa potrzebe glodu w godzinach porannych</p>
 
 <p>Jego cecha jest wytrawny charakter ktory to charakter jest kurwa zaleta dla osob lubiacych takie smaki</p>
@@ -29,5 +28,5 @@
     <li>Wyloz ciasto. Zrob ok. 20 kulek wielkosci pilki golfowej</li>
     <li>Zrob tak:</li>
 </ol>
-<img src="./187812-pepperoni-rolls-mfs-step-5-069--2c65bfc4e292434e9766f37dacfe9587.webp">
+<img src="../pictures/187812-pepperoni-rolls-mfs-step-5-069--2c65bfc4e292434e9766f37dacfe9587.webp">
 <p>Zwin i piecz ok. 15 min.- az sie zezloca.</p>
