--- a/recipes/StuffedGreenPeppers.html
+++ b/recipes/StuffedGreenPeppers.html
@@ -1,4 +1,4 @@
-<img src="./8453672-stuffed-green-peppers-Pinkee-1x1-1-0d77914cc49f4373999e6aa371389b95.webp">
+<img src="../pictures/8453672-stuffed-green-peppers-Pinkee-1x1-1-0d77914cc49f4373999e6aa371389b95.webp">
 <h2>Skladniki:</h2>
     <ul>
         <li>6 zielonych papryk</li>
