--- a/recipes/Super-DeliciousZuppaToscana.html
+++ b/recipes/Super-DeliciousZuppaToscana.html
@@ -1,4 +1,4 @@
-<img src="./Super-Delicious-Zuppa-Toscana-e0ecd2a124674b84b63570320d20ca9b.webp">
+<img src="../pictures/Super-Delicious-Zuppa-Toscana-e0ecd2a124674b84b63570320d20ca9b.webp">
 <h1>Skladniki:</h1>
     <ul>
         <li>Wloska kielbasa cieleca lagodna</li>
